--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mantine/core": "^5.10.3",
+    "@mantine/form": "^5.10.3",
     "@mantine/hooks": "^5.10.3",
     "@primer/octicons-react": "^17.11.1",
     "react": "^18.2.0",
